# imu-firmware

./: CMakeLists.txt  platformio.ini  sdkconfig.defaults  sdkconfig.esp32doit-devkit-v1
hardware/docs/: smart-helmet-sensor-wiring.excalidraw
hardware/kicad/smart-helmet-sensors/: README.md  smart-helmet-sensors.kicad_pro  smart-helmet-sensors.kicad_sch  ~smart-helmet-sensors.kicad_pro.lck
hardware/scripts/: generate_sensor_wiring_excalidraw.py  generate_sensor_wiring_pdf.py
include/: app_status.h  config.h  health_sensors.h  icm20948.h  imu_fusion.h  mq135.h  oled_display.h  sensor_status.h
scripts/: embed_index_html.py
src/: CMakeLists.txt  app_status.c  config.h  health_sensors.c  icm20948.c  icm20948.h  imu_fusion.c  imu_fusion.h  index_html.c  index_html.h  main.c  mq135.c  oled_display.c  sensor_status.c  step_detect.c  step_detect.h  web_server.c
www/: HELMET_CHOICES.md  index.html
www/models/: README.md
