idf_component_register(
    SRCS
        "main.c"
        "icm20948.c"
        "imu_fusion.c"
        "step_detect.c"
        "web_server.c"
        "index_html.c"
        "app_status.c"
        "oled_display.c"
        "health_sensors.c"
        "sensor_status.c"
        "mq135.c"
    INCLUDE_DIRS "../include"
    REQUIRES
        nvs_flash
        esp_wifi
        esp_netif
        esp_event
        driver
        esp_http_server
        esp_adc
)
